--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,56 @@
+/* add your uri of font */
+@import url("");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+    font-size: 1.125rem;
+    min-height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    flex: none;
+}
+
+main {
+    flex: 1;
+}
+
+main[mainprivate] {
+    display: flex;
+    position: relative;
+    flex: 1;
+}
+
+section[contentmain] {
+    flex: 1;
+}
+
+section[sideleftmenu] {
+    position: sticky;
+    top: 0px;
+    left: 0;
+    max-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+nav[navmenuside] {
+    flex: 1;
+}
+
+footer {
+    flex: none;
+}
+
+li {
+    list-style: none;
+}
