docs : add register validator for user register

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,5 @@
 /* add your uri of font */
-@import url("");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 @tailwind base;
 @tailwind components;
